Add Spark Streaming and ScalaTest dependencies