@@ -3,13 +3,23 @@ ThisBuild / scalaVersion := "2.12.18"
 lazy val root = (project in file("."))
   .settings(
     name := "spark-log-analysis",
+    version := "1.0",
 
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-core" % "3.5.6",
-      "org.apache.spark" %% "spark-sql" % "3.5.6"
+      "org.apache.spark" %% "spark-sql" % "3.5.6",
+      "org.apache.spark" %% "spark-streaming" % "3.5.6",
+      "org.scalatest" %% "scalatest" % "3.2.19" % Test
     ),
 
-    Compile / run / javaOptions ++= Seq(
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-    )
+    Compile / run / fork := true,
+
+    javaOptions ++= Seq(
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED"
+    ),
+
+    Test / fork := true
   )
